--- a/index.html
+++ b/index.html
@@ -6,143 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MARATONA MAKER</title>
     <link rel="shortcut icon" href="images/icon.png" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link href="css/main.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-        crossorigin="anonymous"></script>
-    <style>
-        /* GENERAL */
-
-        @import url('https://fonts.googleapis.com/css?family=Open+Sans');
-
-        body {
-            font-family: 'Open Sans', sans-serif;
-            font-size: 17px;
-            color: #333;
-        }
-
-        a:link {
-            text-decoration: none;
-
-        }
-
-        /* HOME */
-
-        #home .button {
-            -moz-transition: all .2s ease-in;
-            -o-transition: all .2s ease-in;
-            -webkit-transition: all .2s ease-in;
-            transition: all .2s ease-in;
-
-            background-color: #ae0000;
-            border: none;
-            color: #fff;
-            text-align: center;
-            font-weight: bold;
-            font-size: 1.2em;
-            text-decoration: none;
-            display: inline-block;
-            cursor: pointer;
-            width: 100%;
-            padding-top: 20px;
-            padding-bottom: 20px;
-        }
-
-
-        #home .button:hover {
-            text-decoration: none;
-            background-color: #880000;
-        }
-
-        /* SOBRE */
-
-        #sobre p {
-            margin-top: 30px;
-        }
-
-        #sobre h2 {
-            margin-bottom: 30px;
-        }
-
-        #sobre .texto {
-            padding: 30px;
-        }
-
-        #sobre .button {
-            -moz-transition: all .2s ease-in;
-            -o-transition: all .2s ease-in;
-            -webkit-transition: all .2s ease-in;
-            transition: all .2s ease-in;
-
-            background-color: #ae0000;
-            border: none;
-            color: #fff;
-            text-align: center;
-            font-weight: bold;
-            font-size: 1em;
-            text-decoration: none;
-            display: inline-block;
-            cursor: pointer;
-            width: 70%;
-            margin-right: 30%;
-            padding-top: 20px;
-            padding-bottom: 20px;
-        }
-
-        #sobre .button:hover {
-            text-decoration: none;
-            background-color: #880000;
-        }
-
-        /* PARCEIROS */
-
-        #parceiros {
-            background-color: #071224;
-        }
-
-        #parceiros h2 {
-            font-size: 30px;
-            margin: 30px;
-            font-weight: bold;
-            color: #fff;
-        }
-
-        #parceiros .col-md-4 img {
-            display: block;
-            padding-top: 40px;
-            padding-bottom: 40px;
-
-            margin: 0 auto;
-            text-align: center;
-        }
-
-
-
-        /* MAPA */
-
-
-
-        /* FOOTER */
-
-        #footer .row {
-            background-color: #ae0000;
-        }
-
-        #footer p {
-            color: #fff;
-            font-weight: bold;
-            text-align: center;
-            margin: 50px;
-        }
-    </style>
-
+    
 </head>
 
 <body>
