--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class="row">
-                <a href="http://google.com">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSeinA_SWskdRlBpGb_WKZuExmx8qacekGD3rceE3fDOXUk9mg/viewform">
                     <div class="col button">
                         Clique aqui e se inscreva!
                     </div>
@@ -61,7 +61,7 @@
                         e-mail:
                         fablab.biomimeticamaker@itsbrasil.org.br
                     </p>
-                    <a href="http://google.com">
+                    <a href="regulameto_maratona_FLLSP_2019.pdf">
                         <div class="button">
                             Baixe aqui o regulamento
                         </div>
@@ -109,7 +109,7 @@
         <div class="container-fluid">
             <div class="row">
                 <p>
-                    Lorem ipsum dolor sit amed
+                    FAB LAB LIVRE SP é um equipamento da Secretaria de Inovação e Tecnologia da Prefeitura Municipal de São Paulo e operada pelo Instituto de tecnologia social - ITS Brasil®. Todos os direitos reservados.
                 </p>
             </div>
         </div>
